756699:TISKIDK-1416:Shipping method UI alignment is not proper in payment page for tablet view fixed

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -68874,3 +68874,9 @@ body.page-viewAllTrending #ia_products_hot .listing.wrapper .left-block .listing
 }
 }
 /*PRDI-227 end*/
+
+/* TISKIDK-1416 */
+.page-multiStepCheckoutSummaryPage li {
+    list-style-type: none;
+}
+/* TISKIDK-1416 */
